@@ -3,7 +3,6 @@ package seedu.address.model.person.predicates;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static seedu.address.testutil.Assert.assertThrows;
 
 import java.util.Arrays;
 import java.util.List;
@@ -12,18 +11,18 @@ import org.junit.jupiter.api.Test;
 
 import seedu.address.testutil.PersonBuilder;
 
-public class PhoneEqualsPredicateTest {
+public class PhoneContainsPredicateTest {
 
     @Test
     public void equals() {
-        PhoneEqualsPredicate firstPredicate = new PhoneEqualsPredicate(List.of("12345678"));
-        PhoneEqualsPredicate secondPredicate = new PhoneEqualsPredicate(List.of("87654321"));
+        PhoneContainsPredicate firstPredicate = new PhoneContainsPredicate(List.of("12345678"));
+        PhoneContainsPredicate secondPredicate = new PhoneContainsPredicate(List.of("87654321"));
 
         // same object -> returns true
         assertTrue(firstPredicate.equals(firstPredicate));
 
         // same values -> returns true
-        PhoneEqualsPredicate firstPredicateCopy = new PhoneEqualsPredicate(List.of("12345678"));
+        PhoneContainsPredicate firstPredicateCopy = new PhoneContainsPredicate(List.of("12345678"));
         assertTrue(firstPredicate.equals(firstPredicateCopy));
 
         // different types -> returns false
@@ -38,28 +37,31 @@ public class PhoneEqualsPredicateTest {
 
     @Test
     public void test_phoneMatches_returnsTrue() {
-        PhoneEqualsPredicate predicate = new PhoneEqualsPredicate(List.of("12345678"));
+        PhoneContainsPredicate predicate = new PhoneContainsPredicate(List.of("12345678"));
         assertTrue(predicate.test(new PersonBuilder().withPhone("12345678").build()));
 
-        predicate = new PhoneEqualsPredicate(Arrays.asList("00000000", "12345678"));
+        predicate = new PhoneContainsPredicate(List.of("3456"));
+        assertTrue(predicate.test(new PersonBuilder().withPhone("12345678").build()));
+
+        predicate = new PhoneContainsPredicate(Arrays.asList("00000000", "3456"));
         assertTrue(predicate.test(new PersonBuilder().withPhone("12345678").build()));
     }
 
     @Test
     public void test_phoneDoesNotMatch_returnsFalse() {
-        PhoneEqualsPredicate predicate = new PhoneEqualsPredicate(List.of("12345678"));
+        PhoneContainsPredicate predicate = new PhoneContainsPredicate(List.of("9999"));
 
         // Different phone
         assertFalse(predicate.test(new PersonBuilder().withPhone("87654321").build()));
 
         // Missing phone
-        assertThrows(AssertionError.class, () -> predicate.test(new PersonBuilder().build()));
+        assertFalse(predicate.test(new PersonBuilder().build()));
     }
 
     @Test
     public void toStringMethod() {
-        PhoneEqualsPredicate predicate = new PhoneEqualsPredicate(List.of("12345678"));
-        String expected = PhoneEqualsPredicate.class.getCanonicalName() + "{phone=[12345678]}";
+        PhoneContainsPredicate predicate = new PhoneContainsPredicate(List.of("12345678"));
+        String expected = PhoneContainsPredicate.class.getCanonicalName() + "{phoneSubstrings=[12345678]}";
         assertEquals(expected, predicate.toString());
     }
 }
